// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`path should nest with nested records 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "string",
    "path": [
      "a",
      "b",
    ],
    "received": "number",
  },
]
`;

exports[`should not parse arrays 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "object",
    "path": [],
    "received": "array",
  },
]
`;

exports[`should not parse non-objects 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "object",
    "path": [],
    "received": "string",
  },
]
`;

exports[`should not parse null 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "object",
    "path": [],
    "received": "null",
  },
]
`;

exports[`should not parse records with invalid keys 1`] = `
[
  {
    "code": "invalid_literal",
    "expected": "a",
    "path": [
      "b",
    ],
  },
]
`;

exports[`should not parse records with invalid values 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "string",
    "path": [
      "b",
    ],
    "received": "number",
  },
]
`;
